# swole-bot

./: .env.example  .gitignore  Makefile  ai_stuff.py  config.json  config.py  main.py  openai_helpers.py  pyproject.toml  readme.md  requirements.txt  scrape.py  scrape_tracker.py  starter_studies.csv  studies.py
.github/workflows/: pr-describer.yml
